# jarvis

./: .env.example  .gitignore  README.md  agents.md  console_ui.py  install_dependencies.sh  jarvis.py  pyproject.toml  requirements.txt  transcribe.py  tts_check.py  wake_word.py
