[project]
name = "jarvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.0",
    "pvporcupine>=3.0.5",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.1.0",
    "pyttsx3>=2.98",
    "requests>=2.32.3",
    "vosk>=0.3.45",
]
